fix: ProductsByCategoryDesktop .showing class gap

--- a/codeverse/src/components/ProductsByCategory/ProductsByCategoryDesktop/styles.module.scss
+++ b/codeverse/src/components/ProductsByCategory/ProductsByCategoryDesktop/styles.module.scss
@@ -146,6 +146,6 @@
     .showing {
         display: flex;
         align-items: center;
-        gap: 13ox;
+        gap: 13px;
     }
 }
